--- a/LICENSE.Rmd
+++ b/LICENSE.Rmd
@@ -1,5 +1,9 @@
 ---
 title: "Licensing and copyright information"
+output:
+  html_document:
+    number_sections: false
+    toc: no
 ---
 
 The course material is licensed under the
